update gradle and plugins to support java 21
Signed-off-by: Richard Salac <richard.salac@broadcom.com>