@@ -119,6 +119,16 @@ configure(subprojects.findAll {it.name != 'platform'}) {
 
     test {
         useJUnitPlatform()
+        jvmArgs '--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/javax.net.ssl=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.net=ALL-UNNAMED'
     }
 
     dependencies {
